--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,24 +1,20 @@
-<section class="hero is-fullheight has-text-centered" id="contact">
+<section class="hero is-fullheight has-text-centered" id="playlistst">
+    
     <div class="hero-body">
         <div class="container">
-            <a id="contact-button" href="https://m.me/{{site.facebook_username}}"
-                class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined has-text-weight-semibold column is-two-fifths"
-                target="_blank">
-                <i class="fab fa-facebook-messenger"></i>Ping me on Messenger
-            </a>
-            <a id="contact-button" href="mailto:{{site.email}}"
-                class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined has-text-weight-semibold column is-two-fifths"
-                target="_blank">
-                <i class="fas fa-envelope"></i>Send me an Email
-            </a>
-            <a id="contact-button" href="https://www.twitter.com/intent/tweet?screen_name={{site.twitter_username}}"
-                class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined has-text-weight-semibold column is-two-fifths"
-                target="_blank">
-                <i class="fab fa-twitter"></i>Tweet me on Twitter
-            </a>
+            <section class="hero is-fullheight" id="project">
+                <div class="hero-body">
+                    <div class="container has-text-centered">
+                        <div class="section">
+                            <p class="subtitle is-uppercase has-text-weight-medium has-text-grey">Videos By Playlist</p>
+                        </div>
+                        {% include project-card.html %}
+                    </div>
+                </div>
+            </section>
             <hr>
             <h3 class="is-size-5 is-uppercase has-text-weight-semibold has-text-black is-marginless">
-                You Can find me here
+                You can find me here
             </h3>
             <div class="column is-full is-size-3">
                 {% unless site.facebook_username == %}
