added comments to blog

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -61,6 +61,10 @@ layout: compress
       </div>
     </div>
   </section>
+  {% if page.comments_id %}
+			{% include comments.html %}
+    {% endif %}
+    <br>
   {% include footer.html %}
 </body>
 <script>
